unityにはJSON.stringifyして送る

--- a/web/css/all_pure.css
+++ b/web/css/all_pure.css
@@ -1,44 +1,44 @@
-@import url("css/HISTORY.md");
-@import url("css/LICENSE.md");
-@import url("css/README.md");
-@import url("css/base-context-min.css");
-@import url("css/base-context.css");
-@import url("css/base-min.css");
-@import url("css/base.css");
-@import url("css/bower.json");
-@import url("css/buttons-core-min.css");
-@import url("css/buttons-core.css");
-@import url("css/buttons-min.css");
-@import url("css/buttons.css");
-@import url("css/forms-min.css");
-@import url("css/forms-nr-min.css");
-@import url("css/forms-nr.css");
-@import url("css/forms.css");
-@import url("css/grids-core-min.css");
-@import url("css/grids-core.css");
-@import url("css/grids-min.css");
-@import url("css/grids-responsive-min.css");
-@import url("css/grids-responsive-old-ie-min.css");
-@import url("css/grids-responsive-old-ie.css");
-@import url("css/grids-responsive.css");
-@import url("css/grids-units-min.css");
-@import url("css/grids-units.css");
-@import url("css/grids.css");
-@import url("css/menus-core-min.css");
-@import url("css/menus-core.css");
-@import url("css/menus-dropdown-min.css");
-@import url("css/menus-dropdown.css");
-@import url("css/menus-horizontal-min.css");
-@import url("css/menus-horizontal.css");
-@import url("css/menus-min.css");
-@import url("css/menus-scrollable-min.css");
-@import url("css/menus-scrollable.css");
-@import url("css/menus-skin-min.css");
-@import url("css/menus-skin.css");
-@import url("css/menus.css");
-@import url("css/pure-min.css");
-@import url("css/pure-nr-min.css");
-@import url("css/pure-nr.css");
-@import url("css/pure.css");
-@import url("css/tables-min.css");
-@import url("css/tables.css");
+@import url("./HISTORY.md");
+@import url("./LICENSE.md");
+@import url("./README.md");
+@import url("./base-context-min.css");
+@import url("./base-context.css");
+@import url("./base-min.css");
+@import url("./base.css");
+@import url("./bower.json");
+@import url("./buttons-core-min.css");
+@import url("./buttons-core.css");
+@import url("./buttons-min.css");
+@import url("./buttons.css");
+@import url("./forms-min.css");
+@import url("./forms-nr-min.css");
+@import url("./forms-nr.css");
+@import url("./forms.css");
+@import url("./grids-core-min.css");
+@import url("./grids-core.css");
+@import url("./grids-min.css");
+@import url("./grids-responsive-min.css");
+@import url("./grids-responsive-old-ie-min.css");
+@import url("./grids-responsive-old-ie.css");
+@import url("./grids-responsive.css");
+@import url("./grids-units-min.css");
+@import url("./grids-units.css");
+@import url("./grids.css");
+@import url("./menus-core-min.css");
+@import url("./menus-core.css");
+@import url("./menus-dropdown-min.css");
+@import url("./menus-dropdown.css");
+@import url("./menus-horizontal-min.css");
+@import url("./menus-horizontal.css");
+@import url("./menus-min.css");
+@import url("./menus-scrollable-min.css");
+@import url("./menus-scrollable.css");
+@import url("./menus-skin-min.css");
+@import url("./menus-skin.css");
+@import url("./menus.css");
+@import url("./pure-min.css");
+@import url("./pure-nr-min.css");
+@import url("./pure-nr.css");
+@import url("./pure.css");
+@import url("./tables-min.css");
+@import url("./tables.css");
